--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <!-- right-image -->
                 <div>
-                  <img src="./assets_files/1656568118664.png" alt="mock-app-image" class="md:ml-48 overflow-hidden" width="580px">                </div> 
+                  <img src="./assets_files/1656568118664.png" alt="mock-app-image" class="md:ml-48 overflow-hidden" width="550px">                </div> 
             </div>
         </section>
         <!-- flex-container with seven flex blocks -->
@@ -377,7 +377,7 @@
             </div>
             </div>
             <!-- Paytm Travel  -->
-            <div class="container flex flex-col md:flex-col bg-lastSessionBlue p-24 mt-[-120px]">
+            <div class="container flex flex-col md:flex-col bg-lastSessionBlue p-24 mt-[-120px] w-[100%]">
               <div class="container flex flex-col md:flex-row bg-myWhite justify-around">
                   <div class="container flex-col p-8">
                      <img src="./assets_files/1626419838546.png" class="w-36 pb-[40px]">
